<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottomsheet_top_left_right_rounded"
        android:paddingBottom="30dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotalItemsLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:text="@string/total_items"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clTopHeader"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotalItems"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:text="@{totalItems}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clTopHeader"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEstimatedPayableLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:text="@string/estimated_payable"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTotalItemsLabel"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEstimatedPayable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:text="@{@string/txt_with_rupee_symbol+``+totalEstimatedPayable}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTotalItemsLabel"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTopHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:paddingVertical="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgClose"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvBillDetailsLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvBillDetailsLabel"
                app:srcCompat="@drawable/ic_close"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBillDetailsLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:text="@string/bill_details"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <data>

        <import type="android.view.View" />

        <variable
            name="totalItems"
            type="String" />

        <variable
            name="totalEstimatedPayable"
            type="String" />

        <variable
            name="viewModel"
            type="app.ezotech.ecommerce.presentation.viewmodel.CartViewModel" />

    </data>

</layout>