<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/btn_bg"
            android:text="@string/btn_add"
            android:textAllCaps="false"
            android:textColor="@color/color_blue"
            android:textSize="14sp"
            android:visibility="@{viewModel.cartCountLiveData > 0 ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNoResultsFound" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textNoResultsFound"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/empty_cart"
            android:textSize="20sp"
            android:visibility="@{viewModel.cartCountLiveData > 0 ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCartCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:gravity="start"
            android:text="@{ viewModel.cartCountLiveData > 1 ? viewModel.cartCountLiveData + ` Items in your cart` : viewModel.cartCountLiveData + ` Item in your cart` }"
            android:textColor="@color/black"
            android:visibility="@{ viewModel.cartCountLiveData > 0 ? View.VISIBLE : View.GONE }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintToolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintToolbar"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgBackArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/toolbarHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/cart_toolbar_header"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgBackArrow"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:visibility="@{ viewModel.cartCountLiveData > 0 ? View.VISIBLE : View.GONE }"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvCart">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCheckout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_view_cart_bg"
                android:backgroundTint="@color/color_blue"
                android:text="@string/checkout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewBill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@{@string/view_bill}"
                android:textColor="@color/color_blue"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/btnCheckout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTotalCartValue" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textTotalCartValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@{@string/txt_with_rupee_symbol+viewModel.cartTotalValueLiveData}"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnCheckout" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clOrderPlacedView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivOrderPlaced"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/order_placed_gif"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:visibility="@{ viewModel.cartCountLiveData > 0 ? View.VISIBLE : View.GONE }"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/clBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCartCount"
            app:setCartProductList="@{viewModel.productListLiveData}"
            app:viewModel="@{ viewModel }"
            tools:itemCount="10"
            tools:listitem="@layout/cart_list_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="app.ezotech.ecommerce.presentation.viewmodel.CartViewModel" />

    </data>

</layout>